--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Custom ###
+src/main/resources/application-secret.yml
+db_dev_mv.db
+db_dev_trace.db
+src/main/generated
