--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,14 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	// PostgreSQL
 	runtimeOnly 'org.postgresql:postgresql'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// H2
 	runtimeOnly 'com.h2database:h2'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator' // 새 컨테이너를 언제 가져올건지
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// 구형 컨테이너에서 신형 컨테이너로 바뀌면 세션 정보가 이관될 수 있도록
+	implementation 'org.springframework.boot:spring-session-data-redis'
 }
 
 tasks.named('test') {
