--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator' // 새 컨테이너를 언제 가져올건지
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// 구형 컨테이너에서 신형 컨테이너로 바뀌면 세션 정보가 이관될 수 있도록
-	implementation 'org.springframework.boot:spring-session-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis'
 }
 
 tasks.named('test') {
