--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,7 +5,8 @@ spring:
   autoconfigure:
     exclude:
   lifecycle:
-    timeout-per-shutdown-phase: 1h # 스프링부트가 종료 요청을 받은 후 기다려줄 수 있는 시간
+    # 스프링부트가 종료 요청을 받은 후 기다려줄 수 있는 시간
+    timeout-per-shutdown-phase: 1h
   datasource:
     url: jdbc:mysql://172.17.0.1:3306/surl_prod
     username: root
@@ -16,6 +17,7 @@ spring:
       host: 172.17.0.1
       port: 6379
       password: ${custom.secret.spring.data.redis.password}
+
   jpa:
     hibernate:
       ddl-auto: update
