성공과 실패의 양식을 통일

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,9 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
   jpa:
     hibernate:
       ddl-auto: update
