--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,71 +1,71 @@
-#name: 'deploy'
-#on:
-#  push:
-#    paths:
-#      - '.github/workflows/**'
-#      - 'src/**'
-#      - 'build.gradle'
-#      - 'Dockerfile'
-#      - 'readme.md'
-#      - 'infraScript/**'
-#    branches:
-#      - 'main' # 본인 브랜치 확인
-#jobs:
-#  makeTagAndRelease:
-#    runs-on: ubuntu-latest
-#    outputs:
-#      tag_name: ${{ steps.create_tag.outputs.new_tag }}
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Create Tag
-#        id: create_tag
-#        uses: mathieudutour/github-tag-action@v6.1
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }} # 발급 받은 깃허브 토큰으로
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 발급 받은 깃허브 토큰으로
-#        with:
-#          tag_name: ${{ steps.create_tag.outputs.new_tag }}
-#          release_name: Release ${{ steps.create_tag.outputs.new_tag }}
-#          body: ${{ steps.create_tag.outputs.changelog }}
-#          draft: false
-#          prerelease: false
-#  ## 자동화 코드
-#  buildImageAndPush:
-#    name: 도커 이미지 빌드와 푸시
-#    needs: makeTagAndRelease
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Docker Buildx 설치
-#        uses: docker/setup-buildx-action@v2
-#      - name: 레지스트리 로그인
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#      - name: set lower case owner name
-#        run: |
-#          echo "OWNER_LC=${OWNER,,}" >> ${GITHUB_ENV}
-#        env:
-#          OWNER: "${{ github.repository_owner }}"
-#      - name: application-secret.yml 생성
-#        env:
-#          ACTIONS_STEP_DEBUG: true
-#          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
-#        run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
-#      - name: 빌드 앤 푸시
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          tags: |
-#            ghcr.io/${{ env.OWNER_LC }}/surl:${{ needs.makeTagAndRelease.outputs.tag_name }},
-#            ghcr.io/${{ env.OWNER_LC }}/surl:latest
+name: 'deploy'
+on:
+  push:
+    paths:
+      - '.github/workflows/**'
+      - 'src/**'
+      - 'build.gradle'
+      - 'Dockerfile'
+      - 'readme.md'
+      - 'infraScript/**'
+    branches:
+      - 'main' # 본인 브랜치 확인
+jobs:
+  makeTagAndRelease:
+    runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.create_tag.outputs.new_tag }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Tag
+        id: create_tag
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} # 발급 받은 깃허브 토큰으로
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 발급 받은 깃허브 토큰으로
+        with:
+          tag_name: ${{ steps.create_tag.outputs.new_tag }}
+          release_name: Release ${{ steps.create_tag.outputs.new_tag }}
+          body: ${{ steps.create_tag.outputs.changelog }}
+          draft: false
+          prerelease: false
+  ## 자동화 코드
+  buildImageAndPush:
+    name: 도커 이미지 빌드와 푸시
+    needs: makeTagAndRelease
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Docker Buildx 설치
+        uses: docker/setup-buildx-action@v2
+      - name: 레지스트리 로그인
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: set lower case owner name
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >> ${GITHUB_ENV}
+        env:
+          OWNER: "${{ github.repository_owner }}"
+      - name: application-secret.yml 생성
+        env:
+          ACTIONS_STEP_DEBUG: true
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
+      - name: 빌드 앤 푸시
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ env.OWNER_LC }}/surl:${{ needs.makeTagAndRelease.outputs.tag_name }},
+            ghcr.io/${{ env.OWNER_LC }}/surl:latest
 #  deploy:
 #    runs-on: ubuntu-latest
 #    needs: [ buildImageAndPush ]
