--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           tags: |
             ghcr.io/${{ env.OWNER_LC }}/surl:${{ needs.makeTagAndRelease.outputs.tag_name }},
             ghcr.io/${{ env.OWNER_LC }}/surl:latest
-#  deploy:
+  deploy:
 #    runs-on: ubuntu-latest
 #    needs: [ buildImageAndPush ]
 #    steps:
